--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
     "bcrypt": "^6.0.0",
+    "date-fns": "^4.1.0",
+    "google-auth-library": "^10.4.2",
+    "nodemailer": "^7.0.10",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.16.3",
